...
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:text="@string/previous_reading"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <pl.srw.billcalculator.component.InstantAutoComplete
            android:id="@+id/et_reading_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:maxLength="9"
            android:gravity="end"
            android:hint="@string/reading_hint_kWh"
...
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:text="@string/current_reading"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_reading_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:maxLength="9"
            android:gravity="end"
            android:hint="@string/reading_hint_kWh"
...
