<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="@string/preferences_pgnig_wsp_konwersji"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/wsp_konwersji_desc"
        android:title="@string/wspolczynnik_konwersji" />

    <EditTextPreference
        android:key="@string/preferences_pgnig_abonamentowa"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/abonamentowa_desc"
        android:title="@string/settings_oplata_abonamentowa" />

    <EditTextPreference
        android:key="@string/preferences_pgnig_paliwo_gazowe"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/paliwo_gazowe_desc"
        android:title="@string/paliwo_gazowe" />

    <EditTextPreference
        android:key="@string/preferences_pgnig_dystrybucyjna_stala"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/dystrybucyjna_stala_desc"
        android:title="@string/dystrybucyjna_stala" />

    <EditTextPreference
        android:key="@string/preferences_pgnig_dystrybucyjna_zmienna"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/dystrybucyjna_zmienna_desc"
        android:title="@string/dystrybucyjna_zmienna" />

</PreferenceScreen>