<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="@layout/pgnig_components_table"
    android:padding="2dp">

    <TextView
        android:id="@+id/tv_charge_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abonamentowa" />

    <TextView
        android:id="@+id/tv_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        tools:text="01.01.2014"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        tools:text="31.12.2014"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:minWidth="110dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        tools:text="1,000" />

    <TextView
        android:id="@+id/tv_Jm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="mc"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/tv_net_price"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="11,0400"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_excise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:text="ZW"
        tools:ignore="HardcodedText,RtlSymmetry"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:text=""
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:text="23"
        tools:ignore="HardcodedText,RtlSymmetry"/>

    <TextView
        android:id="@+id/pgnig_component_row_net_charge"
        android:layout_width="wrap_content"
        android:minWidth="90dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        tools:text="69,27" />

</TableRow>